--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,12 @@
-
+.button-class {
+  padding: 22px 45px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 5px 3px;
+  width: 200px;
+  background-color: tomato;
+  color: black;
+  border: 1px solid black;
+  display: inline-block;
+}
