--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,11 @@
   text-decoration: none;
   font-size: 20px;
   margin: 5px 3px;
-  width: 200px;
-  background-color: tomato;
+  width: 250px;
+  background-color: #97DBAE;
   color: black;
-  border: 1px solid black;
+  border: 2px solid black;
   display: inline-block;
+  border-radius: 25%;
+  cursor: pointer;
 }
